# iranseda_audiobook

./: Makefile  README.md  podcast.xml  pyproject.toml  requirements.txt  tox.ini
configs/: config.yaml
scripts/: run.sh
src/iranseda/: __init__.py  cli.py  config.py  details.py  io.py  listing.py  pipeline.py  utils.py
src/iranseda_scraper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_api_parse.py  test_details_parse.py
